# apex

./: .env.e2e.example  .env.gemini-native.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_zh-CN.md  RELEASE.md  SECURITY.md  build_linux.sh  config.example.json  docker-compose.yml  install-release.sh  install.sh  providers.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-release.yml  ci.yml  frontend-tests.yml  real-provider-smoke.yml
_bmad-output/: index.md
_bmad-output/implementation/: sprint-status.yaml
_bmad-output/planning/: architecture.md  cli-ai-automation-contract.md  dashboard-page-structure-spec-2026-03-11.md  dashboard-ux-revision-plan-2026-03-11.md  epics.md  prd.md  sprint-change-proposal-2026-03-10.md  ux-design-specification.md  web-directory-normalization-plan-2026-03-11.md
_bmad-output/stories/: web-dashboard.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
cp/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
cp/src/: App.tsx
data/: apex.db
docs/: LOGGING_SPEC.md  PRD.md  STORY-web-dashboard.md  WORKFLOW.md  api-contracts-backend.md  architecture-backend.md  architecture.md  config-example.md  current-release-model.md  deployment-guide.md  development-guide-backend.md  development-guide-web.md  index.md  operations.md  project-overview.md  requirements.md  source-tree-analysis.md  sprint-status.yaml
scripts/: test-all.sh  test-gemini-interactions-real.sh  test-gemini-native-real.sh  test-local-e2e.sh  test-real-smoke.sh
src/: compliance.rs  config.rs  converters.rs  database.rs  e2e.rs  gemini_compat.rs  install_metadata.rs  lib.rs  logs.rs  main.rs  metrics.rs  providers.rs  providers_test_temp.rs  router_selector.rs  server.rs  service.rs  upgrade.rs  usage.rs  utils.rs  web_assets.rs
tests/: auth_test.rs  benchmark_test.rs  cli.rs  e04_observability_test.rs  e05_routing_test.rs  e07_compliance_test.rs  e2e_harness_test.rs  e2e_local_blackbox_test.rs  e2e_regression_baseline_test.rs  gateway.rs  hot_reload_test.rs  mcp_prompts_test.rs  mcp_resources_test.rs  mcp_session_test.rs  mcp_tools_test.rs  system.rs  team_test.rs
web/: README.md  config.json  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts
(+166 files in other folders)
