[package]
name = "apex"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
rand = "0.8.5"
axum = "0.7.5"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
notify = "6.1.1"
prometheus = "0.13.4"
tokio-stream = "0.1.15"
url = "2.5.4"
futures = "0.3.31"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tower-http = { version = "0.6.8", features = ["trace", "request-id", "util"] }
tower = { version = "0.5.2", features = ["util"] }
daemonize = "0.5.0"
tracing-appender = "0.2.4"
directories = "6.0.0"
inquire = "0.9.3"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.25.0"
tower = "0.5.2"
