[package]
name = "apex"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = []
embedded-web = ["dep:rust-embed"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = "1.0.139"
rand = "0.8.5"
axum = "0.7.5"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal", "io-std", "io-util", "fs"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
notify = "6.1.1"
prometheus = "0.13.4"
tokio-stream = "0.1.15"
url = "2.5.4"
futures = "0.3.31"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tower-http = { version = "0.6.8", features = ["trace", "request-id", "util", "cors", "fs"] }
tower = { version = "0.5.2", features = ["util"] }
daemonize = "0.5.0"
tracing-appender = "0.2.4"
directories = "6.0.0"
inquire = "0.9.3"
moka = { version = "0.12.10", features = ["future", "sync"] }
glob = "0.3.1"
csv = "1.3"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "3.1.1"
regex = "1.12.3"
once_cell = "1.19"
uuid = "1.12"
rust-embed = { version = "8.7.2", optional = true }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.25.0"
tower = "0.5.2"
